[project]
name = "demo-fake"
version = "0.1.0"
description = ""
authors = [
    {name = "Volodymyr Holomb",email = "wldmrgml@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch[cuda] (>=2.8.0,<3.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "timm (>=1.0.20,<2.0.0)",
    "face-recognition (>=1.3.0,<2.0.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "cmake (>=4.1.0,<5.0.0)",
    "dlib-bin (>=19.24.6,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
